<resources>
    <string name="app_name">Rumah Adat di Indonesia</string>
    <string name="rumah_adat_name">Nama Rumah Adat</string>
    <string name="rumah_adat_origin">Asal Rumah adat</string>
    <string name="description">Deskripsi</string>
    <string name="share">share</string>
    <string name="filosofi">Filosofi</string>
    <string name="desc_filosofi">Description</string>
    <string name="about">About</string>
    <string name="nama">Rio Fransiskus Simanjuntak</string>
    <string name="email">richardjuntaktombuk16@gmail.com</string>
    <string-array name="data_name">
        <item>Krong Bade</item>
        <item>Bolon</item>
        <item>Gadang</item>
        <item>Selaso Jatuh Kembar</item>
        <item>Panggung Kajang Leko</item>
        <item>Bubungan Lima</item>
        <item>Limas</item>
        <item>Nuwo Sesat</item>
        <item>Badui/Baduy</item>
        <item>Kebaya</item>
    </string-array>
    <string-array name="data_origin">
        <item>Rumah Adat Aceh</item>
        <item>Rumah Adat Sumatera Utara</item>
        <item>Rumah Adat Sumatera Barat</item>
        <item>Rumah Adat Riau</item>
        <item>Rumah Adat Jambi</item>
        <item>Rumah Adat Bengkulu</item>
        <item>Rumah Adat Sumatera Selatan</item>
        <item>Rumah Adat Lampung</item>
        <item>Rumah Adat Banten</item>
        <item>Rumah Adat Betawi</item>
    </string-array>
    <string-array name="data_description">
        <item>Orang Aceh memiliki citarasa seni yang sangat baik. Salah satunya terlihat pada rumah khas Krong Bade. Rumah panggung dengan satu tangga di depan ini memiliki perpaduan warna yang cantik. Rumah Krong Bade biasa dikenal juga dengan nama rumoh Aceh. Rumah adat ini jadi salah satu budaya Indonesia yang hampir punah.Rumah adat ini punya tangga di bagian depan rumah dan tingginya berada beberapa meter dari tanah. Jumlah anak tangga rumah adat Krong Bade biasanya berjumlah ganjil. Bahan dasar pembangunan rumahnya adalah kayu, dengan banyak ukiran di dinding rumah. Atap rumahnya terbuat dari daun rumbia dan bentuknya persegi panjang, memanjang dari timur ke barat.</item>
        <item>Bolon merupakan rumah khas Suku Batak di Sumatera Utara. Di Sumatera Utara sendiri Bolon terdiri dari beberapa jenis seperti Bolon Simalungun, Bolon Pakpak, Bolon Angkota, Bolon Karo, dan lainnya.Dengan bentuk rumah panggung persegi panjang, rumah Bolon biasanya dilengkapi tiang penyangga setinggi 1,75 meter. Untuk masuk ke rumah, penghuni atau tamu harus naik tangga yang jumlahnya selalu ganjil.Ciri khas rumah adat ini adalah bentuknya panggung, terdiri dari beberapa tiang penyangga bergaris tengah. Dinding rumahnya dihiasi dengan ornamen khas Simalungun dengan warna merah, putih, dan hitam. Hiasan ornamen ini adalah lambang akan pandangan kosmologis dan filosofi budaya suku Batak.</item>
        <item>Sampai hari ini, Rumah Gadang khas Sumatera Barat masih banyak ditemui di provinsi ini. Rumah Gadang atau rumah godang adalah rumah adat Minangkabau. Ornamen rumah ini juga banyak ditemui di seluruh Indonesia, khususnya di rumah makan Padang.Rumah adat ini punya bentuk puncak atap yang runcing, menyerupai tanduk kerbau. Dulunya atap ini dibuat dari bahan ijuk dan bisa bertahan sampai puluhan tahun. Tetapi belakangan, atap rumah banyak berganti dengan seng.Rumahnya dibangun dengan bentuk empat persegi panjang, dibagi atas 2 bagian yakni depan dan belakang. Bagian depan biasanya penuh dengan ukiran ornamen bermotif akar, bunga, dan daun. Sedangkan bagian luar belakang dilapisi belahan bambu.</item>
        <item>Riau memiliki beberapa jenis rumah adat, salah satunya adalah Selaso Jatuh Kembar yang paling terkenal. Nama ini diadopsi dari bentuk bangunan yang memiliki dua selasar. Selasar rumah panggung ini memiliki posisi lebih rendah dibanding ruang tengah dan biasanya dijadikan tempat musyawarah.Rumah adat ini memiliki ciri khas yakni berbentuk rumah panggung atau memiliki kolong. Di dalam rumah hanya ada sekat yang memisahkan ruang tengah dan ruang telo (tempat menyimpan makanan), tidak ada ruangan atau kamar-kamar.Bahan bangunannya terbuat dari alam, seperti atap dari daun rumbia, lalu dinding, tiang atau lantai dari kayu-kayu berkualitas baik seperti kayu meranti, kayu medang, atau kayu punak.</item>
        <item>Perpaduan warna kuning dan merah di rumah adat Jambi ini membuat penampilannya terlihat cantik. Salah satu hal menarik dari rumah ini adalah pemetaan rumah yang terdiri dari delapan ruang.Konsep pembagian ruang ini bisa diterapkan juga dalam rumah masa kini. Ruang serambi dalam, yang terdiri dari ruang tiru orangtua dan kamar tidur anak gadis, dan ruang makan, disebut ruang balik menahan.Bagian atapnya dinamai “Gajah Mabuk”, sesuai dengan nama pembuat desainnya. Bentuknya seperti perahu dengan ujung atas yang melengkung. Sementara bagian langit-langit dibuat dari tebar layar atau semacam plafon yang memisahkan ruang loteng dengan ruang di bawahnya. Ruang loteng ini digunakan sebagai ruang penyimpanan.</item>
        <item>Ciri khas rumah adat Bubungan Lima ini salah satunya terletak dari bentuk atapnya yang tampak seperti bertumpuk-tumpuk. Wiranata dkk. dalam jurnal ilmiahnya yang berjudul “Rancang Bangun Permainan Android Tiga Dimensi Teka Teki Rumah Bubungan Lima dengan Metode Kecerdasan Buatan” menyebutkan bahwa nama Bubungan Lima merujuk pada bentuk atapnya. Selain itu, bahan pembuat atapnya adalah ijuk pohon enau. Namun seiring berjalannya waktu, bahan pembuat atap sudah berganti dengan seng.</item>
        <item>Dari namanya Rumah Limas pastinya kita sudah tahu pasti bahwa rumah ini pasti berbentuk limas. Bangunan rumah adat ini punya lantai yang bertingkat-tingkat yang merepresentasikan filosofi budaya masyarakat setempat, biasa disebut bengkilas. Dari jauh, rumah ini nampak seperti rumah panggung dengan tiang-tiang tertancap ke tanah.Rumah adat ini punya luas mulai dari 400 – 1000 m2 dan biasanya digunakan untuk hajatan atau acara adat. Rangka rumah adat terbuat dari kayu seru yang cukup langka. Bahan material untuk membuat dinding, lantai, dan pintunya menggunakan kayu tembesu. Sedangkan untuk tiang rumah menggunakan kayu unglen yang tahan air. </item>
        <item>Nuwo Sesat memiliki fungsi sebagai tempat utama untuk pertemuan adat bagi para purwatin atau penyeimbang saat sedang mengadakan musyawarah adat. Rumah adat Nuwo Sesat ini disebut juga sebagai Balai Agung.Secara fisiknya, Nuwo Sesat berbentuk rumah panggung bertiang dan sebagian besar dari rumah adat ini dibuat dengan menggunakan material papan kayu. Pada awalnya, rumah Nuwo Sesat mempunyai atap yang berbahan dasar anyaman ilalang. Namun, saat ini atapnya sudah digantikan dengan genting untuk menyesuaikan dengan perubahan zaman.</item>
        <item>Rumah adat dari provinsi Banten ini dimiliki oleh suku Badui, kelompok etnis masyarakat adat suku di Banten. Bentuk rumahnya sering disebut juga dengan Julang Ngapak dan gaya bangunannya seperti rumah panggung.Bagian atap terdiri dari daun yang disebut sulah nyanda dan bagian bilik rumah dan pintu dibuat dari anyaman bambu yang disusun secara vertikal, dikenal dengan nama sarigsig. Selain itu, rumah adat Baduy dibagi dalam 3 bagian, yakni sosoro (depan), tepas (tengah), dan imah (belakang).</item>
        <item>Rumah adat betawi memiliki nama Kebaya. Disebut sebagai rumah kebaya karena bentuk atapnya yang mirip pelana yang dilipat dan jika dilihat dari samping, lipatan-lipatan itu mirip dengan lipatan kebaya. Sampai sekarang, ornamen rumah tradisional dari Betawi ini masih sering dipakai, yaitu bagian lis ukiran di bawah genteng.Pemasangan lis khas Betawi tersebut adalah cara paling mudah untuk menunjukkan ciri khas rumah tradisional Jakarta. Atap rumahnya terbuat dari genteng atau atep (daun kirai yang dianyam), dinding depan dengan kayu gowok/kayu nangka, dinding rumah lainnya dengan anyaman bambu, dan pondasi yang digunakan adalah batu kali.</item>
    </string-array>
    <string-array name="data_photo">
        <item>@drawable/krong_bade</item>
        <item>@drawable/bolon</item>
        <item>@drawable/gadang</item>
        <item>@drawable/selaso_jatuh_kembar</item>
        <item>@drawable/panggung_kajang_leko</item>
        <item>@drawable/bubungan_lima</item>
        <item>@drawable/limas</item>
        <item>@drawable/nuwo_sesat</item>
        <item>@drawable/badui</item>
        <item>@drawable/kebaya</item>
    </string-array>
    <string-array name="data_source">
        <item>https://id.wikipedia.org/wiki/Rumah_Krong_Bade</item>
        <item>https://id.wikipedia.org/wiki/Ruma_Bolon</item>
        <item>https://en.wikipedia.org/wiki/Rumah_Gadang</item>
        <item>https://id.wikipedia.org/wiki/Rumah_adat_Selaso_Jatuh_Kembar</item>
        <item>https://id.wikipedia.org/wiki/Rumah_Panggung_Kajang_Lako</item>
        <item>https://id.wikipedia.org/wiki/Rumah_Bubungan_Lima</item>
        <item>https://id.wikipedia.org/wiki/Rumah_Limas</item>
        <item>https://id.wikipedia.org/wiki/Nuwo_Sesat</item>
        <item>https://id.wikipedia.org/wiki/Rumah_adat_Badui</item>
        <item>https://id.wikipedia.org/wiki/Rumah_kebaya</item>
    </string-array>
    <string-array name="data_image1">
        <item>https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaXkNLOzvJmwqLmnW5wtPSRjaE7VeBST2QztF7Md5mUjPHHV4WIKUNSXV-NKPZ1crGjvw&amp;usqp=CAU</item>
        <item>https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-jhPBOdEnJc86bJMGlNMdtR0W050AtSI1qw&amp;usqp=CAU</item>
        <item>https://asset.kompas.com/crops/ZG4UWTLI1EhaBaRqq1zcWxNGhlA=/0x0:1000x667/750x500/data/photo/2020/08/28/5f48688bddfb2.jpg</item>
        <item>https://www.andalastourism.com/wp-content/uploads/2021/03/Keunikan-Balai-Selaso-Jatuh-Kembar.jpg</item>
        <item>https://asset.kompas.com/crops/0JAuNVZOxyKTA05SQNPtmdA4tB0=/99x0:688x393/750x500/data/photo/2022/01/08/61d8f4d0c926b.jpeg</item>
        <item>https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5gLjNG34MXilLwjfLGuuJbY2WAh0Gc9SPNTcdP1qRQb8Q2m_EQEGkMnOnBsgUCElX12w&amp;usqp=CAU</item>
        <item>https://i0.wp.com/www.romadecade.org/wp-content/uploads/2021/10/Filosofi-5-Tingkatan-Ruang-Kekijing-dalam-Rumah-Adat-Limas.jpg?w=759&amp;ssl=1</item>
        <item>https://o-cdn-cas.sirclocdn.com/parenting/images/rumah_adat_lampung_nuwo_sesat.width-800.format-webp.webp</item>
        <item>https://akcdn.detik.net.id/community/media/visual/2017/10/17/ce20db5a-c412-4d9b-922a-4627c870abb7_169.jpg?w=700&amp;q=90</item>
        <item>https://img.celebrities.id/okz/800/op536B/master_J005L0nl1f_1839_keunikan_rumah_kebaya_adat_betawi.jpg</item>
    </string-array>
</resources>